src/objects/BillNPay__Message_Templates__c.object
<CustomObject>
    <description>SMS and Email templates used for payment requests, confirmations, etc.</description>
    <fields>
        <fullName>BillNPay__Content__c</fullName>
        <inlineHelpText>Message to display to user
SMS: messages &gt; 160 characters will be broken into multiple messages. Keep it short!   
Email: Use HTML formatting. Recommend copying HTML code from a 3rd party editor.
Refer to Admin Guide for Variables and Conditions</inlineHelpText>
        <label>Content</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BillNPay__Email_HTML_Content__c</fullName>
        <label>Email HTML Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BillNPay__Email_Subject__c</fullName>
        <label>Email Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillNPay__Template_Status__c</fullName>
        <inlineHelpText>When creating a new template, set status to New.  This will trigger creation in the Bill &amp; Pay system</inlineHelpText>
        <label>Template Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BillNPay__Usage__c</fullName>
        <inlineHelpText>How is this message template used</inlineHelpText>
        <label>Usage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Message Template</label>
    <listViews>
        <fullName>BillNPay__All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>BillNPay__Content__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BillNPay__Email</fullName>
        <columns>NAME</columns>
        <columns>BillNPay__Email_Subject__c</columns>
        <columns>BillNPay__Email_HTML_Content__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>BillNPay__Message_Templates__c.BillNPay__Email</value>
        </filters>
        <label>Email</label>
    </listViews>
    <listViews>
        <fullName>BillNPay__SMS</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>BillNPay__Content__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>BillNPay__Message_Templates__c.BillNPay__SMS</value>
        </filters>
        <label>SMS</label>
    </listViews>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Message Templates</pluralLabel>
    <recordTypes>
        <fullName>BillNPay__Email</fullName>
        <active>true</active>
        <label>Email</label>
    </recordTypes>
    <recordTypes>
        <fullName>BillNPay__SMS</fullName>
        <active>true</active>
        <label>SMS</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>